--- a/StoredProcedure/StoredProcedure/appsettings.json
+++ b/StoredProcedure/StoredProcedure/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "server=LAPTOP-BL89E70B\\MSSQLSERVER02; database=StoredProcTARge23; Trusted_connection=true;MultipleActiveResultSets=true;"
+
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
