--- a/StoredProcedure/StoredProcedure/appsettings.json
+++ b/StoredProcedure/StoredProcedure/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "server=LAPTOP-BL89E70B\\MSSQLSERVER02; database=StoredProcTARge23; Trusted_connection=true;MultipleActiveResultSets=true;"
+    "DefaultConnection": "server=LAPTOP-BL89E70B\\MSSQLSERVER02; database=StoredProcTARge23; Trusted_connection=true;MultipleActiveResultSets=true; TrustServerCertificate=True"
 
   },
   "Logging": {
